--- a/DailyTaskRecorder.Presentaion/DailyTaskRecorder.Presentaion.csproj
+++ b/DailyTaskRecorder.Presentaion/DailyTaskRecorder.Presentaion.csproj
@@ -48,26 +48,30 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Command\AddTaskCommand.cs" />
     <Compile Include="Framework\ViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\TaskData.cs" />
     <Compile Include="ViewModel\TaskListViewModel.cs" />
-    <Compile Include="View\TaskListView.xaml.cs">
-      <DependentUpon>TaskListView.xaml</DependentUpon>
+    <Compile Include="View\TaskListWindow.xaml.cs">
+      <DependentUpon>TaskListWindow.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DailyTaskRecorder.Application\DailyTaskRecorder.Application.csproj">
+      <Project>{4e5f8368-849d-40ef-94a5-d1b0727363c6}</Project>
+      <Name>DailyTaskRecorder.Application</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DailyTaskRecorder.Domain\DailyTaskRecorder.Domain.csproj">
       <Project>{edb0a7ab-b9c1-4944-9779-389c8c725415}</Project>
       <Name>DailyTaskRecorder.Domain</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Page Include="View\TaskListView.xaml">
+    <Page Include="View\TaskListWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
