--- a/DailyTaskRecorder/DailyTaskRecorder.csproj
+++ b/DailyTaskRecorder/DailyTaskRecorder.csproj
@@ -39,6 +39,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Reactive.Core, Version=3.0.1000.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Reactive.Core.3.1.1\lib\net45\System.Reactive.Core.dll</HintPath>
@@ -74,20 +75,13 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
+    <Compile Include="SqliteCreator\SqliteInitializer.cs" />
+    <Page Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
@@ -126,6 +120,10 @@
     <ProjectReference Include="..\DailyTaskRecorder.Presentaion\DailyTaskRecorder.Presentaion.csproj">
       <Project>{5e278da7-5ee7-43e6-a87b-0b2a17a6d3cf}</Project>
       <Name>DailyTaskRecorder.Presentaion</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DailyTaskRecorder.SQLInfrastructure\DailyTaskRecorder.SQLInfrastructure.csproj">
+      <Project>{dd7a483d-f277-430b-9f7a-59cb5c6a6a8c}</Project>
+      <Name>DailyTaskRecorder.SQLInfrastructure</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
