--- a/DailyTaskRecorder.Application/DailyTaskRecorder.Application.csproj
+++ b/DailyTaskRecorder.Application/DailyTaskRecorder.Application.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task\Create\TaskCreateCommand.cs" />
     <Compile Include="Task\Create\TaskCreateResult.cs" />
+    <Compile Include="Task\Find\TaskFindAllResult.cs" />
     <Compile Include="Task\TaskApplicationService.cs" />
   </ItemGroup>
   <ItemGroup>
