--- a/DailyTaskRecorder/App.config
+++ b/DailyTaskRecorder/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Server=(localdb)\\mssqllocaldb;Database=DailyTaskRecorder;Trusted_Connection=True;MultipleActiveResultSets=true" />
+    <add name="DefaultConnection" connectionString="Data Source=DailyTaskRecorder.db" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
