--- a/DailyTaskRecorder/packages.config
+++ b/DailyTaskRecorder/packages.config
@@ -8,4 +8,5 @@
   <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net45" />
   <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
+  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net45" />
 </packages>
