--- a/DailyTaskRecorder.Presentaion/packages.config
+++ b/DailyTaskRecorder.Presentaion/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="MaterialDesignColors" version="1.2.2" targetFramework="net45" />
   <package id="MaterialDesignThemes" version="3.0.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net45" />
 </packages>
