--- a/DailyTaskRecorder.Presentaion/DailyTaskRecorder.Presentaion.csproj
+++ b/DailyTaskRecorder.Presentaion/DailyTaskRecorder.Presentaion.csproj
@@ -70,9 +70,9 @@
     <Compile Include="Command\AddTaskCommand.cs" />
     <Compile Include="Command\FindAllTaskCommand.cs" />
     <Compile Include="Command\SettingSaveCommand.cs" />
-    <Compile Include="Command\WorkActionCommand.cs" />
     <Compile Include="Component\TaskRecorderTimer.cs" />
     <Compile Include="Converter\DomainVMConverter.cs" />
+    <Compile Include="Framework\DelegateCommand.cs" />
     <Compile Include="Framework\ViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
